--- a/force-app/main/default/lwc/helloWorld/helloWorld.html
+++ b/force-app/main/default/lwc/helloWorld/helloWorld.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card title="My World">
-        Hello World 2.o
+        Hello World changed from GIT hub
     </lightning-card>
 </template>
